--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,67 +1,101 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-:root{
-    --primary: #0070cc;
-    --gray: #757575;
-    --white: #fdfdff;
-    --black: #030712;
+:root {
+  --primary: #0070cc;
+  --gray: #757575;
+  --white: #fdfdff;
+  --black: #030712;
 }
-
-a{
-    text-decoration: none;
+html {
+  font-family: Arial, Helvetica, sans-serif;
 }
-a:hover{
-    color: var(--primary);
+a {
+  text-decoration: none;
 }
-button{
-    border: none;
-    outline: none;
-    background: none;
+a:hover {
+  color: var(--primary);
 }
-button:hover{
-    cursor: pointer;
-    filter: brightness(.9);
+button {
+  border: none;
+  outline: none;
+  background: none;
 }
-
+button:hover {
+  cursor: pointer;
+  filter: brightness(0.9);
+}
 
 /* HEADER */
-header{
-    
+header {
 }
-header .inner{
-    width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
+header .inner {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0.1rem 1rem;
+  display: flex;
+  justify-content: space-between;
 }
-header .inline-logo{
-    background-color: var(--black);
-    display: flex;
-    justify-content: end;
-    padding: 0.5rem 1rem;
-
+header .inline-logo {
+  background-color: var(--black);
+  display: flex;
+  justify-content: end;
+  padding: 0.5rem 1rem;
 }
-.inline-logo img{
-    filter: invert();
-    height: 1rem;
+.inline-logo img {
+  filter: invert();
+  height: 1rem;
 }
-.navbar, .dropdown-menu, .navbar-actions{
-    display: flex;
-    gap: .8rem;
-    align-items: center;
-}
-.navbar-actions .button-container{
-    border: 1px solid red;
-    padding: .25rem .75rem;
+.navbar,
+.dropdown-menu,
+.navbar-actions {
+  display: flex;
+  gap: 0.8rem;
+  align-items: center;
 }
 
-.icon-search{
-    width: 1.2rem;
-    height: 1.2rem;
+.navbar .ps5-logo img {
+  width: 2.2rem;
 }
 
+.dropdown-menu {
+  padding: 0 1rem;
+  gap: 2.2rem;
+}
+
+.navbar-actions .session-init-button {
+  background-color: var(--primary);
+  padding: 0.3rem 1rem;
+  border-radius: 999px;
+  color: var(--white);
+  font-size: 1rem;
+  font-weight: bold;
+}
+.search-button {
+    border: 1px solid #75757566;
+    padding: .3rem .6rem;
+   height: 100%;
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+   box-shadow: 0 0 .2rem #03071233;
+}
+.icon-search {
+  width: 1.2rem;
+  height: 1.2rem;
+}
+.dropdown-button {
+  font-size: 1rem;
+  font-weight: bold;
+  color: var(--gray);
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
+}
+
+.dropdown-button i {
+  font-size: 0.6rem;
+}
 /* HEADER */
